# DnDCharSheet

./: Attack.cpp  CMakeLists.txt  DnDClasses.cpp  Interface.cpp  background.cpp  background.h  hp.cpp  hp.h  main.cpp
DndBackgroundHP/: CMakeLists.txt  background.cpp  background.h  hp.cpp  hp.h  main.cpp
DndCharSheet/: Attack.cpp  Attack.h  CharacterSheet.h  D&D 5e Approved Race Stats Chart - Sheet1.csv  DnDClasses.cpp  DnDClasses.h  DndCharSheet.pro  HitDice.cpp  HitDice.h  Interface.cpp  Interface.h  background.cpp  background.h  charSheet.h  hp.cpp  hp.h  inventory.cpp  inventory.h  main.cpp  race.cpp  race.h  spell.cpp  spell.h
build-DndCharSheet-Qt_6_6_0_for_macOS-Debug/: DndCharSheet  Makefile  dnd-spells.csv
build-DndCharSheet-Qt_6_6_0_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-DndCharSheet-Qt_6_6_0_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: Attack.cpp.8F3FDDD134F596D3.idx  Attack.h.1A560F7C6DC4CDB0.idx  CharacterSheet.h.3DB5780CA1DAED57.idx  DnDClasses.cpp.BB4A2362A9368750.idx  DnDClasses.h.0C5370E9AA39EAC6.idx  HitDice.cpp.6239ED7ED16EF6F3.idx  HitDice.h.DC52B9A75E309CC3.idx  Interface.h.73A96C333169F645.idx  QCoreApplication.0BABAAC899740A01.idx  __tree.4FDECFDE0652E82D.idx  background.cpp.6884B619255CD46D.idx  background.h.6BFFBA22C0284D3A.idx  bitset.8EE298DA0BB5C2B3.idx  charSheet.h.0CDA750F72BCCD5A.idx  cmath.68EA02A0E7145C9E.idx  cstdarg.6CC4226BB1C03ABA.idx  cwchar.18F023117C1A2E39.idx  fstream.FF85EE375D057CEF.idx  hp.cpp.EE55C87BB837BFEF.idx  hp.h.38703EF5B6EDB1D8.idx  integral_constant.h.6DE430EF162028D5.idx  (+129 more)
